--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,17 +13,27 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+} */
+
+.header {
+  font-family: 'Dancing Script', cursive;
+  align-items: center;
+  width: 100%;
+  max-height: fit-content;
+  background-color: lightslategray;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.panel-wrapper {
+  display: flex;
+  width: 100vw;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  background-color: darkslategrey;
+  padding: 0;
+  margin: 20px 0 0 0;
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
