--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=New+Rocker&family=Open+Sans&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -13,7 +15,7 @@ code {
 }
 
 .header {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'New Rocker', cursive;
   align-items: center;
   width: 100%;
   max-height: fit-content;
