--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,16 @@ code {
   margin: 20px 0 0 0;
   list-style: none;
 }
+
+.panel {
+  font-family: 'New Rocker', cursive;
+  padding: 5px;
+  width: 330px;
+  height: 710px;
+  margin-top: 10px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+  border-radius: .2em;
+}
